--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.GLong" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.GlApp" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/light_orange</item>
         <item name="colorPrimaryVariant">@color/orange</item>
@@ -14,7 +14,7 @@
         <!-- Customize your theme here. -->
     </style>
 
-    <style name="ThemeOverlay.GLong.FullscreenContainer" parent="">
+    <style name="ThemeOverlay.GlApp.FullscreenContainer" parent="">
         <item name="fullscreenBackgroundColor">@color/dark_gray</item>
         <item name="fullscreenTextColor">@color/light_gray</item>
     </style>
