--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.GLong" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.GlApp" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/light_orange</item>
         <item name="colorPrimaryVariant">@color/orange</item>
@@ -14,13 +14,13 @@
         <!-- Customize your theme here. -->
     </style>
 
-    <style name="Theme.GLong.Fullscreen" parent="Theme.GLong">
+    <style name="Theme.GlApp.Fullscreen" parent="Theme.GLong">
         <item name="android:actionBarStyle">@style/Widget.Theme.GLong.ActionBar.Fullscreen</item>
         <item name="android:windowActionBarOverlay">true</item>
         <item name="android:windowBackground">@null</item>
     </style>
 
-    <style name="ThemeOverlay.GLong.FullscreenContainer" parent="">
+    <style name="ThemeOverlay.GlApp.FullscreenContainer" parent="">
         <item name="fullscreenBackgroundColor">@color/dark_gray</item>
         <item name="fullscreenTextColor">@color/light_gray</item>
     </style>
