--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -14,8 +14,8 @@
         <!-- Customize your theme here. -->
     </style>
 
-    <style name="Theme.GlApp.Fullscreen" parent="Theme.GLong">
-        <item name="android:actionBarStyle">@style/Widget.Theme.GLong.ActionBar.Fullscreen</item>
+    <style name="Theme.GlApp.Fullscreen" parent="Theme.GlApp">
+        <item name="android:actionBarStyle">@style/Widget.Theme.GlApp.ActionBar.Fullscreen</item>
         <item name="android:windowActionBarOverlay">true</item>
         <item name="android:windowBackground">@null</item>
     </style>
