--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -7,22 +7,19 @@
     android:theme="@style/ThemeOverlay.GlApp.FullscreenContainer"
     tools:context=".MainActivity">
 
-    <!-- The primary full-screen view. This can be replaced with whatever view
-         is needed to present your content, e.g. VideoView, SurfaceView,
-         TextureView, etc. -->
     <TextView
         android:id="@+id/fullscreen_content"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
         android:keepScreenOn="true"
-        android:text="@string/welcome_message"
+        android:text="@string/connect_to_board"
         android:textColor="?attr/fullscreenTextColor"
-        android:textSize="50sp"
+        android:textSize="30sp"
         android:textStyle="bold" />
 
     <TextView
-        android:id="@+id/fullscreen_info"
+        android:id="@+id/board_data"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_margin="20dp"
@@ -30,6 +27,17 @@
         android:keepScreenOn="true"
         android:textColor="?attr/fullscreenTextColor"
         android:textSize="20sp" />
+
+    <ProgressBar
+        android:id="@+id/fullscreen_content_loading"
+        style="@android:style/Widget.Material.ProgressBar.Large"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:indeterminate="true"
+        android:indeterminateTintMode="src_atop"
+        android:indeterminateTint="@color/light_orange"
+        android:visibility="gone" />
 
     <!-- This FrameLayout insets its children based on system windows using
          android:fitsSystemWindows. -->
@@ -53,22 +61,16 @@
                 android:layout_weight="1"
                 android:orientation="horizontal">
 
+                <!-- Hidden until needed for any purpose -->
+
                 <Button
                     android:id="@+id/connect_button"
                     style="?android:attr/buttonBarButtonStyle"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:text="@string/bluetooth"
-                    android:visibility="visible" />
-
-                <ProgressBar
-                    android:id="@+id/connect_button_loading"
-                    style="@android:style/Widget.Material.Light.ProgressBar"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="center"
-                    android:indeterminate="true"
                     android:visibility="gone" />
+
             </LinearLayout>
         </LinearLayout>
     </FrameLayout>
