--- a/app/src/main/res/xml/root_preferences.xml
+++ b/app/src/main/res/xml/root_preferences.xml
@@ -4,39 +4,61 @@
     <PreferenceCategory app:title="@string/connection">
 
         <SwitchPreferenceCompat
-            app:key="connect_on_app_start"
+            app:key="bluetooth_connect_on_start"
             app:title="@string/connect_on_app_start" />
 
+        <ListPreference
+            app:key="bluetooth_board_select"
+            app:title="@string/connect_to"
+            app:summary="@string/select_specific_paired_bluetooth_device"/>
+
         <EditTextPreference
-            app:key="bluetooth_ssid_of_board"
-            app:title="@string/bluetooth_ssid_of_board"
+            app:key="bluetooth_board_ssid"
+            app:title="@string/board_bluetooth_ssid"
             app:defaultValue="@string/board_name"
-            app:useSimpleSummaryProvider="true" />
+            app:useSimpleSummaryProvider="true"
+            app:isPreferenceVisible="false"/>
 
     </PreferenceCategory>
 
-    <PreferenceCategory app:title="@string/board">
+    <PreferenceCategory app:title="@string/drive_configuration">
 
         <SeekBarPreference
-            app:key="power"
+            app:key="max_throttle_power"
             android:min="1"
             android:max="20"
+            android:defaultValue="10"
             app:showSeekBarValue="true"
-            app:summary="Max power"
-            app:title="Amps" />
+            app:title="@string/max_throttle_power"
+            app:summary="@string/amps" />
+
+        <SeekBarPreference
+            app:key="max_brake_power"
+            android:min="1"
+            android:max="20"
+            android:defaultValue="10"
+            app:showSeekBarValue="true"
+            app:title="@string/max_brake_power"
+            app:summary="@string/amps" />
 
         <SwitchPreferenceCompat
-            app:key="attachment"
-            app:summaryOff="@string/attachment_summary_off"
-            app:summaryOn="@string/attachment_summary_on"
-            app:title="@string/attachment_title" />
+            app:key="accelerate_over_time"
+            app:summaryOff="@string/smooth_acceleration_off"
+            app:summaryOn="@string/smooth_acceleration_on"
+            app:title="@string/smooth_acceleration" />
 
-        <ListPreference
-            app:key="reply"
-            app:defaultValue="reply"
-            app:entries="@array/reply_entries"
-            app:entryValues="@array/reply_values"
-            app:title="@string/reply_title"
+    </PreferenceCategory>
+
+    <PreferenceCategory
+        app:title="@string/app_interface">
+
+        <MultiSelectListPreference
+            app:key="board_data"
+            app:entries="@array/board_data_entries"
+            app:entryValues="@array/board_data_values"
+            app:defaultValue="@array/board_data_values_default"
+            app:title="@string/board_data_displayed_on_drive_screen"
+            app:dialogTitle="@string/select_board_data_to_display"
             app:useSimpleSummaryProvider="true" />
 
     </PreferenceCategory>
@@ -44,9 +66,15 @@
     <PreferenceCategory
         app:title="@string/general">
 
+        <SwitchPreference
+            app:key="debug_mode"
+            app:title="@string/debug_mode"
+            app:summary="@string/display_debug_preferences_and_data" />
+
         <Preference
             app:key="reset"
-            app:title="Reset settings"/>
+            app:title="@string/reset_preferences"/>
+
     </PreferenceCategory>
 
 
