Updated preference list

--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -1,17 +1,23 @@
 <resources>
     <string-array name="board_data_entries">
+        <item>Temperature Mosfet</item>
+        <item>Temperature Motor</item>
         <item>Average Motor Current</item>
         <item>Average Input Current</item>
         <item>Duty Cycle Now</item>
         <item>Rpm</item>
         <item>Input Voltage</item>
         <item>AmpHours</item>
-        <item>AmpHoursCharged</item>
+        <item>AmpHours (Charged)</item>
+        <item>WattHours</item>
+        <item>WattHours (Charged)</item>
         <item>Tachometer</item>
-        <item>Tachometer (absolute)</item>
+        <item>Tachometer (Absolute)</item>
     </string-array>
 
     <string-array name="board_data_values">
+        <item>tempMosfet</item>
+        <item>tempMotor</item>
         <item>avgMotorCurrent</item>
         <item>avgInputCurrent</item>
         <item>dutyCycleNow</item>
@@ -19,6 +25,8 @@
         <item>inpVoltage</item>
         <item>ampHours</item>
         <item>ampHoursCharged</item>
+        <item>wattHours</item>
+        <item>wattHoursCharged</item>
         <item>tachometer</item>
         <item>tachometerAbs</item>
     </string-array>
