--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <color name="light_yellow">#33FFCC00</color>
     <color name="light_orange">#FFFFAA00</color>
     <color name="orange">#FFFF8800</color>
     <color name="dark_orange">#FFFF5500</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
+    <color name="dark_dark_gray">#FF222222</color>
     <color name="dark_gray">#FF333333</color>
     <color name="gray">#FF555555</color>
     <color name="light_gray">#FF888888</color>
+    <color name="light_light_gray">#FFCCCCCC</color>
     <color name="white">#FFFFFFFF</color>
     <color name="light_blue_600">#FF039BE5</color>
     <color name="light_blue_900">#FF01579B</color>
