--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -6,12 +6,12 @@
         <item name="colorPrimaryVariant">@color/orange</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_700</item>
+        <item name="colorSecondary">@color/light_blue_600</item>
+        <item name="colorSecondaryVariant">@color/light_blue_900</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
-        <!-- Customize your theme here. -->
+        <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
+        <item name="android:backgroundTint">@color/light_light_gray</item>
     </style>
 
     <style name="Theme.GlApp.Fullscreen" parent="Theme.GlApp">
@@ -21,7 +21,7 @@
     </style>
 
     <style name="ThemeOverlay.GlApp.FullscreenContainer" parent="">
-        <item name="fullscreenBackgroundColor">@color/dark_gray</item>
-        <item name="fullscreenTextColor">@color/light_gray</item>
+        <item name="fullscreenBackgroundColor">@color/light_gray</item>
+        <item name="fullscreenTextColor">@color/dark_gray</item>
     </style>
 </resources>
