Added animations to drive neutral bar
Fixed issue with bluetooth spamming no connection
Hid selected board data in preferences
Disabled preference not ready to implement
Disabled log spamming

--- a/app/src/main/res/xml/root_preferences.xml
+++ b/app/src/main/res/xml/root_preferences.xml
@@ -43,6 +43,7 @@
             app:summary="@string/amps" />
 
         <SwitchPreferenceCompat
+            app:enabled="false"
             app:key="accelerate_over_time"
             app:summaryOff="@string/smooth_acceleration_off"
             app:summaryOn="@string/smooth_acceleration_on"
