--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="light_yellow">#33FFCC00</color>
+    <color name="orange_transparent_50">#88FFAA00</color>
+    <color name="orange_transparent_75">#AAFFAA00</color>
     <color name="light_orange">#FFFFAA00</color>
     <color name="orange">#FFFF8800</color>
     <color name="dark_orange">#FFFF5500</color>
